<resources>
    <string name="app_name">Newspapers</string>
    <string name="url_intent">url</string>
    <string name="pass_btn1">1</string>
    <string name="pass_btn2">2</string>
    <string name="pass_btn3">3</string>
    <string name="pass_btn4">4</string>
    <string name="pass_btn5">5</string>
    <string name="pass_btn6">6</string>
    <string name="pass_btn7">7</string>
    <string name="pass_btn8">8</string>
    <string name="pass_btn9">9</string>
    <string name="pass_btn0">0</string>
    <string name="pass_btnRemove1">⇦</string>
    <string name="pass_btnClear">C</string>
</resources>