<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="10dp"
    tools:context=".View.PasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        style="@style/guideline"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        style="@style/guideline"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line3"
        style="@style/guideline"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line4"
        style="@style/guideline"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line5"
        style="@style/guideline"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/pass_tvTitle"
        style="@style/text_style_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/pin" />

    <LinearLayout
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/line1">

        <ImageView
            android:id="@+id/circle1"
            style="@style/image_pin" />

        <ImageView
            android:id="@+id/circle2"
            style="@style/image_pin" />

        <ImageView
            android:id="@+id/circle3"
            style="@style/image_pin" />

        <ImageView
            android:id="@+id/circle4"
            style="@style/image_pin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/line2"
        app:layout_constraintTop_toTopOf="@id/line1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/line3"
        app:layout_constraintTop_toTopOf="@id/line2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/line4"
        app:layout_constraintTop_toTopOf="@id/line3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/line5"
        app:layout_constraintTop_toTopOf="@id/line4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClearAll"
            style="@style/btn_pin_style"
            android:text="@string/pass_btnClear" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            style="@style/btn_pin_style"
            android:text="@string/pass_btn0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClearOne"
            style="@style/btn_pin_style"
            android:text="@string/pass_btnRemove1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>